--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body>
+  <!--suppress HtmlUnknownTag -->
   <app-root></app-root>
 <script src="main-ODGMS74J.js" type="module"></script></body>
 </html>
